# TG-voip-rate

./: .gitignore  CMakeLists.txt  README.md  build_lib_macos.sh  build_linux.sh  build_macos.sh  generate_xcode.sh  opusfile_adapter.cc  opusfile_adapter.h  pesqmain_adapter.cc  rate_log.cc  rate_log.h  resampler.cc  resampler.h
FFmpeg/: CMakeLists.txt  libavutil-src.txt  libswresample-src.txt
FFmpeg/config/linux/: config.h
FFmpeg/config/macos/: config.asm  config.h
FFmpeg/libavutil/: CMakeLists.txt
FFmpeg/libswresample/: CMakeLists.txt
PESQ-MOS/: .gitignore  CMakeLists.txt  pesqmain.c
cmake-config/: toolchain.cmake
cmake-config/linux/: Linux.cmake
opusfile/: CMakeLists.txt
wav_file/: audio_util.h  checks.cc  checks.h  stringutils.cc  wav_file.cc  wav_file.h  wav_header.cc
